# AdapterExample

./: .gitignore  CMakeLists.txt  CMakePresets.json  PrimAdapters.cpp  PrimAdapters.h
cmake/: FindHoudiniUsd.cmake
install/AdapterExample/resources/: plugInfo.json
install/PrimSchemas/resources/: generatedSchema.usda  plugInfo.json
install/PrimSchemas/resources/usdCustomPrims/: schema.usda
